# unifi-mcp

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  claude_desktop_config.json  client.py  docker-compose.yml  pyproject.toml  server.py
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: docker.yml  pr-tests.yml
skills/setup-unifi/: SKILL.md
tests/: test_client.py  test_dispatch.py  test_tools_registry.py
tools/: __init__.py  acl.py  application.py  clients.py  devices.py  dns.py  firewall.py  hotspot.py  networks.py  sites.py  supporting.py  traffic.py  wifi.py
