[project]
name = "unifi-network-mcp"
version = "1.0.0"
description = "MCP server for UniFi Network API v10.1.84 (local connection)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
unifi-network-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
